@@ -1,3 +1,6 @@
+<b><u> v1.12, 12.12.2015</b></u>
+<font color=#FF8C00>&#9830;</font> Reminder: Fix a little Typo. Whooops ;)
+
 <b><u> v1.11, 12.12.2015</b></u>
 <font color=#FF8C00>&#9830;</font> Config: Move the Datatext options to an own group.
 <font color=#FF8C00>&#9830;</font> Core: Add Roleicons from SVUI (Credit Munglunch) taken from ElvUI_SLE.
